--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,13 @@
   border-radius: 10px;
 }
 
+/* main header */
 .title {
   border-radius: 0 0 10px 10px;
   padding: 0.5rem;
   background-color: #66b6d2;
   color: #fffeeb;
   text-align: center;
-  cursor: pointer;
 }
 
 .title h1 {
@@ -25,14 +25,20 @@
   margin: 1rem;
   font-size: 50px;
   color: #fffeeb;
+  cursor: pointer;
 }
 
+.hr {
+  border-radius: 10px;
+}
+
+/* main content */
 .page-home {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
+  height: 70%;
 }
 
 .main-header {
@@ -46,7 +52,6 @@
 
 .btn {
   margin: 6px;
-  padding: 0.5rem 0;
   font-size: 18px;
   font-weight: bold;
   border: none;
@@ -76,17 +81,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 100%;
+  height: 70%;
 }
 
 .ingredients-list {
   background-color: #b2dae8;
   width: 90%;
-  height: 80%;
+  padding: 0;
   overflow-y: scroll;
 }
 
 .ingred-li {
+  list-style-type: none;
   padding: 0.5rem;
   font-size: 1.5rem;
   font-weight: bold;
@@ -129,4 +135,8 @@
 /* hide element */
 .hidden {
   display: none;
+}
+
+@media screen & (min-width: 1200px) {
+
 }
