--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,12 @@
 
 /* main header */
 .title {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
   border-radius: 0 0 10px 10px;
-  padding: 0.5rem;
+  padding: 1rem;
   background-color: #66b6d2;
   color: #fffeeb;
   text-align: center;
@@ -17,12 +21,14 @@
 
 .title h1 {
   font-weight: bolder;
+  padding: 0;
+  margin: 0;
 }
 
 .home-icon {
   position: absolute;
-  left: 0;
-  margin: 1rem;
+  left: 0.5rem;
+  top: 0.5rem;
   font-size: 50px;
   color: #fffeeb;
   cursor: pointer;
@@ -42,12 +48,18 @@
 }
 
 .main-header {
+  position: relative;
   margin: 16px auto;
   display: flex;
   justify-content: space-between;
   background-color: #b2dae8;
+  margin-top: 80px;
   height: 45px;
   width: 90%;
+}
+
+.main-header h2 {
+  display: none;
 }
 
 .btn {
@@ -74,6 +86,10 @@
   font-size: 200px;
   color: #66b6d2;
   cursor: pointer;
+}
+
+.large-bg {
+  display: none;
 }
 
 .page-ingredients {
@@ -132,11 +148,131 @@
   color: #ff3939;
 }
 
+.nav-links {
+  display: none;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #fffeeb;
+  font-size: 1rem;
+  padding: 1rem;
+}
+
+.nav-links a:hover {
+  border-radius: 20px;
+  background-color: #007da9;
+}
+
+.logo-small {
+  display: none;
+}
+
 /* hide element */
 .hidden {
   display: none;
 }
 
-@media screen & (min-width: 1200px) {
+@media (min-width: 1200px) {
+  * {
+    font-size: 2rem;
+  }
 
+  .title {
+    border-bottom-right-radius: 20px;
+    text-align: left;
+    z-index: 10;
+  }
+
+  .page-home {
+    height: 100%;
+    width: 80%;
+    float: right;
+  }
+
+  .btn {
+    display: none;
+  }
+
+  .main-header {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 170px;
+    margin: 0 22%;
+    float: right;
+    height: 80px;
+    width: 76%;
+  }
+
+  .main-header h2 {
+    display: inline;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: #934d2f;
+  }
+
+  .home-logo {
+    display: none;
+  }
+
+  .large-bg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #b2dae8;
+    position: absolute;
+    bottom: 1rem;
+    margin: 0 22%;
+    float: right;
+    height: 65%;
+    width: 76%;
+  }
+
+  .logo-large {
+    color: #fffeeb;
+    cursor: auto;
+  }
+
+  .hr {
+    display: block;
+    background-color: #fffeeb;
+    height: 10px;
+    width: 100%;
+  }
+
+  .nav-bottom {
+    display: none;
+  }
+
+  .nav-side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #66b6d2;
+    width: 20%;
+    border-bottom-right-radius: 20px;
+  }
+
+  .nav-links {
+    align-self: flex-start;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-top: 140px;
+    margin-left: 1rem;
+  }
+
+  .logo-small {
+    display: block;
+    margin-bottom: 3rem;
+    font-size: 150px;
+    color: #fffeeb;
+  }
 }
