--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@
   display: none;
 }
 
+/* Ingredients Page */
 .page-ingredients {
   display: flex;
   flex-direction: column;
@@ -113,7 +114,7 @@
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
-  color: #934d2f;
+  color: #0074c2;
 }
 
 .ingred-li:active {
@@ -210,7 +211,7 @@
     margin: 0;
     padding: 0;
     text-align: center;
-    color: #934d2f;
+    color: #0074c2;
   }
 
   .home-logo {
@@ -233,6 +234,29 @@
   .logo-large {
     color: #fffeeb;
     cursor: auto;
+  }
+
+  .page-ingredients {
+    position: absolute;
+    float: right;
+    margin: 0 22%;
+    top: 9rem;
+    bottom: 0;
+    height: 65%;
+    width: 76%;
+  }
+
+  .ingredients-list {
+    margin: 0;
+    width: 100%;
+  }
+
+  .home-icon {
+    position: relative;
+    float: right;
+    top: 0;
+    margin-right: 1rem;
+    font-size: 80px;
   }
 
   .hr {
