--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@
 .list-item {
   list-style-type: none;
   padding: 0.5rem;
+  margin: 0;
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
