--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 70%;
+  height: 100vh;
 }
 
 .main-header {
