--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 }
 
 .border-round {
+  border: none;
   border-radius: 10px;
 }
 
@@ -145,6 +146,33 @@
   margin-right: 1rem;
   background-color: #fffeeb;
   box-shadow: 0.3rem 0.3rem 0.8rem 0.2rem #66b6d2;
+}
+
+.search-box {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
+}
+
+.search-box input {
+  color: #0074c2;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: #b2dae8;
+  padding: 5px;
+  margin: 10px;
+  width: 100%;
+}
+
+#search-input::placeholder {
+  color: #0074c2;
+}
+
+#search-input:focus {
+  outline: none;
+  background-color: #b2dae8;
 }
 
 /* Nav Bars */
