--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 70%;
+  height: 65vh;
 }
 
 .text-list {
@@ -308,6 +308,10 @@
   .text-list {
     margin: 0;
     width: 100%;
+  }
+
+  .search-box input {
+    margin-top: 0.7rem;
   }
 
   .drink-img {
