--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,15 @@
 
 .home-logo {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+  text-align: center;
+}
+
+.home-logo h2 {
+  font-size: 2rem;
+  color: #66b6d2;
 }
 
 .logo-large {
@@ -80,6 +87,11 @@
 
 .large-bg {
   display: none;
+}
+
+.large-bg h2 {
+  font-size: 1.5rem;
+  color: #0074c2;
 }
 
 /* Secondary Pages */
@@ -173,6 +185,20 @@
 #search-input:focus {
   outline: none;
   background-color: #b2dae8;
+}
+
+.drink-detailed {
+
+}
+
+.random-btn {
+  border: none;
+  color: white;
+  background-color: #0074c2;
+  font-size: 2rem;
+  padding: 1rem;
+  width: 90%;
+  cursor: pointer;
 }
 
 /* Nav Bars */
@@ -276,11 +302,11 @@
     display: none;
   }
 
-  /* Secondary Pages */
   .large-bg {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
     background-color: #b2dae8;
     position: absolute;
     bottom: 1rem;
@@ -292,8 +318,9 @@
 
   .logo-large {
     color: #fffeeb;
-    cursor: auto;
   }
+
+  /* Secondary Pages */
 
   .page-list {
     position: absolute;
@@ -332,6 +359,12 @@
     top: 0;
     margin-right: 1rem;
     font-size: 80px;
+  }
+
+  .random-btn {
+    font-size: 1.8rem;
+    padding: 0.7rem;
+    width: 50%;
   }
 
   /* Nav Bars */
