--- a/css/styles.css
+++ b/css/styles.css
@@ -195,16 +195,18 @@
   margin: 5%;
   height: 70vh;
   margin-top: 6rem;
-  overflow-y: scroll;
 }
 
 .detail-top-row {
   margin: 5%;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
-.detail-top-row p {
+.detail-top-row h2 {
+  font-size: 3rem;
+  padding: 2rem;
+  color: #0074c2;
   text-align: center;
   flex-basis: 50%;
 }
@@ -213,15 +215,38 @@
   width: 50%;
 }
 
-.details-heading {
-  justify-content: space-evenly;
+.details-div {
+  background-color: #fffeeb;
+  width: 90%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  overflow-y: scroll;
 }
 
-.details-div {
-  display: flex;
-  justify-content: space-evenly;
-  width: 90%;
-  margin-top: 1rem;
+.details-div p {
+  margin: 5px;
+  padding: 1rem;
+  line-height: 1.7rem;
+  border: 1px solid black;
+  overflow-y: scroll;
+}
+
+.details-table {
+  margin: 5px;
+}
+
+.details-table th,
+.details-table td {
+  padding: 0.5rem;
+}
+
+.details-table,
+.details-table th,
+.details-table td {
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid black;
 }
 
 .random-btn {
