--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,6 @@
 
 .detail-top-row h2 {
   font-size: 3rem;
-  padding: 2rem;
   color: #0074c2;
   text-align: center;
   flex-basis: 50%;
@@ -218,7 +217,7 @@
 .details-div {
   background-color: #fffeeb;
   width: 90%;
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-between;
   overflow-y: scroll;
@@ -226,13 +225,14 @@
 
 .details-div p {
   margin: 5px;
-  padding: 1rem;
+  padding: 0.5rem;
   line-height: 1.7rem;
   border: 1px solid black;
   overflow-y: scroll;
 }
 
 .details-table {
+  height: 100%;
   margin: 5px;
 }
 
@@ -418,6 +418,75 @@
     top: 0;
     margin-right: 1rem;
     font-size: 80px;
+  }
+
+  .drink-detailed {
+    flex-direction: row;
+    position: absolute;
+    float: right;
+    margin: 0 22%;
+    top: 9rem;
+    bottom: 0;
+    height: 65%;
+    width: 76%;
+    overflow-y: scroll;
+  }
+
+  .drink-name {
+    display: none;
+  }
+
+  .detail-top-row {
+    margin: 5%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .detail-top-row h2 {
+    font-size: 3rem;
+    color: #0074c2;
+    text-align: center;
+    flex-basis: 50%;
+  }
+
+  .detailed-img {
+    width: 100%;
+  }
+
+  .details-div {
+    margin-top: 0;
+    width: 100%;
+    height: 90%;
+    padding: 0.5rem;
+  }
+
+  .details-div p {
+    flex-basis: 50%;
+    margin: 5px;
+    padding: 0.5rem;
+    line-height: 1.7rem;
+    border: 1px solid black;
+    font-size: 1rem;
+  }
+
+  .details-table {
+    height: 90%;
+    flex-basis: 50%;
+    margin: 5px;
+  }
+
+  .details-table th,
+  .details-table td {
+    padding: 0.5rem;
+  }
+
+  .details-table,
+  .details-table th,
+  .details-table td {
+    font-size: 1rem;
+    border-radius: 5px;
+    text-align: center;
+    border: 1px solid black;
   }
 
   .random-btn {
