--- a/css/styles.css
+++ b/css/styles.css
@@ -193,8 +193,9 @@
   align-items: center;
   background-color: #b2dae8;
   margin: 5%;
-  height: 70vh;
+  height: 60vh;
   margin-top: 6rem;
+  overflow-y: scroll;
 }
 
 .detail-top-row {
@@ -218,6 +219,7 @@
   background-color: #fffeeb;
   width: 90%;
   padding: 0.5rem;
+  margin-bottom: 1rem;
   display: flex;
   justify-content: space-between;
   overflow-y: scroll;
@@ -249,15 +251,28 @@
   border: 1px solid black;
 }
 
+.random-btn-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .random-btn {
   border: none;
   color: white;
   background-color: #0074c2;
   font-size: 2rem;
-  margin-top: 1rem;
-  padding: 1rem;
   width: 90%;
+  padding: 1rem;
   cursor: pointer;
+}
+
+.random-btn:hover {
+  background-color: #66b6d2;
+}
+
+.random-btn:active {
+  background-color: #0074c2;
 }
 
 /* Nav Bars */
@@ -427,7 +442,7 @@
     margin: 0 22%;
     top: 9rem;
     bottom: 0;
-    height: 65%;
+    height: 50%;
     width: 76%;
     overflow-y: scroll;
   }
@@ -437,7 +452,8 @@
   }
 
   .detail-top-row {
-    margin: 5%;
+    flex-basis: 50%;
+    margin: 0 5%;
     justify-content: center;
     align-items: center;
   }
@@ -454,7 +470,8 @@
   }
 
   .details-div {
-    margin-top: 0;
+    margin-top: 1rem;
+    margin-right: 1rem;
     width: 100%;
     height: 90%;
     padding: 0.5rem;
@@ -489,10 +506,22 @@
     border: 1px solid black;
   }
 
+  .random-btn-div {
+    position: absolute;
+    bottom: 1rem;
+    right: 0;
+    width: 80%;
+    margin: 0;
+  }
+
   .random-btn {
-    font-size: 1.8rem;
-    padding: 0.7rem;
+    border: none;
+    color: white;
+    background-color: #0074c2;
+    font-size: 1.5rem;
     width: 50%;
+    padding: 0.5rem;
+    cursor: pointer;
   }
 
   /* Nav Bars */
