Drink details right side fixed. #5

--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@
 }
 
 .detail-top-row h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   color: #0074c2;
   text-align: center;
   flex-basis: 50%;
@@ -221,7 +221,7 @@
   padding: 0.5rem;
   margin-bottom: 1rem;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   overflow-y: scroll;
 }
 
@@ -230,7 +230,6 @@
   padding: 0.5rem;
   line-height: 1.7rem;
   border: 1px solid black;
-  overflow-y: scroll;
 }
 
 .details-table {
@@ -261,7 +260,7 @@
   border: none;
   color: white;
   background-color: #0074c2;
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 90%;
   padding: 1rem;
   cursor: pointer;
