--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
   background-color: #66b6d2;
   color: #fffeeb;
   text-align: center;
+  z-index: 10;
 }
 
 .title h1 {
@@ -64,6 +65,7 @@ body {
   background-color: #eab676;
   padding: 10px;
   width: 90%;
+  z-index: 10;
 }
 
 .main-header hr {
@@ -132,8 +134,8 @@ body {
 /* Secondary Pages */
 .page-list {
   position: absolute;
-  top: 13.5rem;
-  bottom: 6.5rem;
+  top: 185px;
+  bottom: 90px;
   left: 5%;
   right: 5%;
 }
@@ -231,8 +233,8 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #b2dae8;
-  padding-bottom: 5%;
-  margin: 140px 5% 30px;
+  margin: 5%;
+  margin-top: 140px;
 }
 
 .detail-top-row {
@@ -258,6 +260,7 @@ body {
   background-color: #fffeeb;
   width: 90%;
   padding: 0.5rem;
+  margin-bottom: 5%;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
