--- a/css/styles.css
+++ b/css/styles.css
@@ -492,8 +492,9 @@ main {
 
   .main-header {
     position: absolute;
+    left: 0;
     top: 170px;
-    margin: 0 16.5%;
+    margin: 0 21.5%;
     height: 100px;
     width: 77%;
     float: right;
