--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,38 @@ main {
   border-radius: 10px;
 }
 
+@keyframes loader {
+  0% {
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+
+  100% {
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+.loader {
+  position: absolute;
+  right: 50px;
+  top: 40px;
+}
+
+.loader::before {
+  animation: 1.5s linear infinite loader;
+  animation-play-state: inherit;
+  border: solid 5px #cfd0d1;
+  border-bottom-color: #1c87c9;
+  border-radius: 50%;
+  content: "";
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  transform: translate3d(-50%, -50%, 0);
+  will-change: transform;
+}
+
 /* title header */
 .title {
   position: fixed;
@@ -570,6 +602,11 @@ main {
     bottom: 35px;
     right: 35px;
     left: 21.5%;
+  }
+
+  .loader {
+    right: 80px;
+    top: 60px;
   }
 
   .text-list {
