--- a/css/layout.css
+++ b/css/layout.css
@@ -1,11 +1,18 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
+  background-color: #fffeeb;
   height: 100%;
 }
 
 main {
+  overflow-y: scroll;
   height: 82vh;
 }
 
+/* Grid Layout */
 .container {
   display: flex;
   justify-content: center;
@@ -62,4 +69,121 @@ main {
 
 .col-12 {
   flex-basis: 100%;
+}
+
+/* Pages */
+.title {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  border-radius: 0 0 10px 10px;
+  padding: 1rem;
+  background-color: #66b6d2;
+  color: #fffeeb;
+  text-align: center;
+  z-index: 10;
+}
+
+.page-home {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+}
+
+.page-list {
+  position: absolute;
+  top: 150px;
+  bottom: 105px;
+  left: 3%;
+  right: 3%;
+}
+
+.modal-bg {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+}
+
+.modal-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: white;
+  height: 180px;
+  width: 250px;
+  text-align: center;
+}
+
+.nav-bottom {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border-radius: 10px 10px 0 0;
+  background-color: #66b6d2;
+}
+
+.nav-side {
+  display: none;
+}
+
+@media screen and (min-width: 1280px) {
+  * {
+    font-size: 2rem;
+  }
+
+  main {
+    overflow-y: hidden;
+  }
+
+  /* Pages */
+  .title {
+    border-bottom-right-radius: 20px;
+    text-align: left;
+    z-index: 10;
+  }
+
+  .page-home {
+    height: 100%;
+    width: 80%;
+    float: right;
+  }
+
+  .modal-box {
+    height: 270px;
+    width: 375px;
+  }
+
+  .nav-bottom {
+    display: none;
+  }
+
+  .nav-side {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #66b6d2;
+    width: 20%;
+    border-bottom-right-radius: 20px;
+    overflow-y: scroll;
+  }
 }
