--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,4 @@
-* {
-  font-family: 'Roboto', sans-serif;
-}
-
-body {
-  background-color: #fffeeb;
-}
-
-main {
-  overflow-y: scroll;
-}
-
-.border-round {
-  border: none;
-  border-radius: 10px;
-}
-
-/* title header */
-.title {
-  position: fixed;
-  left: 0;
-  top: 0;
-  right: 0;
-  border-radius: 0 0 10px 10px;
-  padding: 1rem;
-  background-color: #66b6d2;
-  color: #fffeeb;
-  text-align: center;
-  z-index: 10;
-}
-
+/* Title Header */
 .title h1 {
   font-weight: bolder;
   padding: 0;
@@ -60,13 +30,6 @@ main {
 /* Main Content */
 
 /* Home Page */
-.page-home {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-}
-
 .main-header {
   position: fixed;
   left: 3%;
@@ -148,14 +111,6 @@ main {
 }
 
 /* Secondary Pages */
-.page-list {
-  position: absolute;
-  top: 150px;
-  bottom: 105px;
-  left: 3%;
-  right: 3%;
-}
-
 .text-list {
   background-color: #b2dae8;
   height: 100%;
@@ -351,31 +306,6 @@ main {
 }
 
 /* Modal */
-.modal-bg {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1000;
-}
-
-.modal-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  background-color: white;
-  height: 180px;
-  width: 250px;
-  text-align: center;
-}
-
 .modal-box h2 {
   font-size: 1.5rem;
 }
@@ -403,18 +333,6 @@ main {
 /* Nav Bars */
 
 /* Bottom Navbar */
-.nav-bottom {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  border-radius: 10px 10px 0 0;
-  background-color: #66b6d2;
-}
-
 .nav-icon {
   margin: 1rem 0;
   font-size: 40px;
@@ -432,10 +350,6 @@ main {
 }
 
 /* Sidebar Nav */
-.nav-side {
-  display: none;
-}
-
 .nav-links a {
   color: #fffeeb;
   font-size: 1rem;
@@ -462,34 +376,18 @@ main {
   bottom: 80px;
 }
 
-/* hide element */
+/* Helper classes */
+.border-round {
+  border: none;
+  border-radius: 10px;
+}
+
 .hidden {
   display: none;
 }
 
-@media (min-width: 1200px) {
-  * {
-    font-size: 2rem;
-  }
-
-  main {
-    overflow-y: hidden;
-  }
-
-  /* Page Header */
-  .title {
-    border-bottom-right-radius: 20px;
-    text-align: left;
-    z-index: 10;
-  }
-
+@media screen and (min-width: 1280px) {
   /* Home Page */
-  .page-home {
-    height: 100%;
-    width: 80%;
-    float: right;
-  }
-
   .main-header {
     position: absolute;
     left: 0;
@@ -721,11 +619,6 @@ main {
   }
 
   /* modal */
-  .modal-box {
-    height: 270px;
-    width: 375px;
-  }
-
   .modal-btn {
     width: 140px;
     padding: 15px;
@@ -741,25 +634,6 @@ main {
     background-color: #fffeeb;
     height: 10px;
     width: 100%;
-  }
-
-  .nav-bottom {
-    display: none;
-  }
-
-  .nav-side {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #66b6d2;
-    width: 20%;
-    border-bottom-right-radius: 20px;
-    overflow-y: scroll;
   }
 
   .nav-links {
