Changed project title. Moved CSS to proper section.

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,43 +11,6 @@ main {
   overflow-y: scroll;
 }
 
-.border-round {
-  border: none;
-  border-radius: 10px;
-}
-
-@keyframes loader {
-  0% {
-    transform: translate3d(-50%, -50%, 0) rotate(0deg);
-  }
-
-  100% {
-    transform: translate3d(-50%, -50%, 0) rotate(360deg);
-  }
-}
-
-.loader {
-  position: absolute;
-  right: 50px;
-  top: 40px;
-}
-
-.loader::before {
-  animation: 1.5s linear infinite loader;
-  animation-play-state: inherit;
-  border: solid 5px #cfd0d1;
-  border-bottom-color: #1c87c9;
-  border-radius: 50%;
-  content: "";
-  height: 40px;
-  width: 40px;
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  transform: translate3d(-50%, -50%, 0);
-  will-change: transform;
-}
-
 .title h1 {
   font-weight: bolder;
   padding: 0;
@@ -160,6 +123,38 @@ main {
 }
 
 /* Secondary Pages */
+@keyframes loader {
+  0% {
+    transform: translate3d(-50%, -50%, 0) rotate(0deg);
+  }
+
+  100% {
+    transform: translate3d(-50%, -50%, 0) rotate(360deg);
+  }
+}
+
+.loader {
+  position: absolute;
+  right: 50px;
+  top: 40px;
+}
+
+.loader::before {
+  animation: 1.5s linear infinite loader;
+  animation-play-state: inherit;
+  border: solid 5px #cfd0d1;
+  border-bottom-color: #1c87c9;
+  border-radius: 50%;
+  content: "";
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  transform: translate3d(-50%, -50%, 0);
+  will-change: transform;
+}
+
 .text-list {
   background-color: #b2dae8;
   height: 100%;
@@ -275,7 +270,7 @@ main {
 
 .detailed-img {
   width: 50%;
-  object-fit: cover;
+  object-fit: fit;
   height: 100%;
 }
 
@@ -606,7 +601,7 @@ main {
   }
 
   .detailed-img {
-    width: 95%;
+    width: 440px;
     height: 80%;
   }
 
